--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -1,4 +1,8 @@
+server:
+  port: 9002
 spring:
+  thymeleaf:
+    prefix: classpath:/templates/
   datasource:
     ds1:
       driverClassName: com.mysql.jdbc.Driver
