--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'application'
 
-mainClassName = 'cn.x.JdbcTemp'
+mainClassName = 'cn.x.App'
 
 bootJar {
     baseName = 'jdbc'
