--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   thymeleaf:
     prefix: classpath:/templates/
+    mode: HTML
+    encoding: UTF-8
+    content-type: text/html
+    cache: false
   datasource:
     ds1:
       driverClassName: com.mysql.jdbc.Driver
